@startuml
title Diagramme de classe - Dessin du labyrinthe

package UI {
    class Scene

    class GameScene {
        - instance : GameScene
        ---
        + GetInstance(): GameScene

        + GameScene()
        + getCamera(): Camera
        + getMaze(): Maze
    }

    GameScene -up-|> Scene
}

package Mom {
    class Maze

    class Camera {
        - position: Vector3
        - zoom: float
        ---
        + Camera()
        + Camera(position: Vector3, zoom: float)
        + getPosition(): Vector3
        + getZoom(): float
        + setPosition(position: Vector3): void
        + setZoom(zoom: float): void
    }
}

GameScene "1" -- "1" Camera: - camera
GameScene "1" -- "1" Maze: - maze

@enduml